// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-sort-column Renders \`field-sort-column\` with custom props 1`] = `
<widget-settings-item-stub
  eager="true"
  title="Default sort column"
>
  <div
    class="layout"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-autocomplete"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="combobox"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active theme--light"
              style="left: 0px; position: absolute;"
            >
              Order by
            </label>
            <input
              autocomplete="off"
              type="text"
            />
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
              value="sort_column"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                DESC
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
              value="DESC"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`field-sort-column Renders \`field-sort-column\` with custom props 2`] = `undefined`;

exports[`field-sort-column Renders \`field-sort-column\` with default props 1`] = `
<widget-settings-item-stub
  eager="true"
  title="Default sort column"
>
  <div
    class="layout"
  >
    <div
      class="v-input theme--light v-text-field v-select v-autocomplete"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="combobox"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label theme--light"
              style="left: 0px; position: absolute;"
            >
              Order by
            </label>
            <input
              autocomplete="off"
              type="text"
            />
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="layout"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                ASC
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
              value="ASC"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`field-sort-column Renders \`field-sort-column\` with default props 2`] = `undefined`;
